--- a/pom.xml
+++ b/pom.xml
@@ -38,22 +38,21 @@
     <version.dc-core-model>2.1.0-SNAPSHOT</version.dc-core-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
-    <version.jackson-databind>2.8.6</version.jackson-databind>
+    <version.jackson>2.8.6</version.jackson>
     <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
     <version.junit>4.12</version.junit>
+    <version.junit5>5.1.0</version.junit5>
+    <version.junit5-platform>1.1.0</version.junit5-platform>
     <version.mockito-java8>2.0.1</version.mockito-java8>
     <version.mockito-core>2.7.6</version.mockito-core>
     <version.saxon>9.8.0-6</version.saxon>
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.17</version.snakeyaml>
-    <version.spring-aop>5.0.4.RELEASE</version.spring-aop>
-    <version.spring-beans>5.0.4.RELEASE</version.spring-beans>
-    <version.spring-context>5.0.4.RELEASE</version.spring-context>
+    <version.springframework>5.0.4.RELEASE</version.springframework>
+    <version.spring-boot>2.0.0.RELEASE</version.spring-boot>
     <version.spring-data-commons>1.13.4.RELEASE</version.spring-data-commons>
-    <version.spring-web>5.0.4.RELEASE</version.spring-web>
-    <version.spring-webmvc>5.0.4.RELEASE</version.spring-webmvc>
     <version.spring-security>4.2.1.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.7.RELEASE</version.thymeleaf>
 
@@ -62,8 +61,9 @@
     <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
     <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
     <version.maven-javadoc-plugin>2.10.4</version.maven-javadoc-plugin>
-    <version.maven-source-plugin>3.0.1</version.maven-source-plugin>
     <version.nexus-staging-maven-plugin>1.6.7</version.nexus-staging-maven-plugin>
+    <version.maven-source-plugin>3.0.1</version.maven-source-plugin>
+    <version.maven-surefire-plugin>2.19.1</version.maven-surefire-plugin>
     <version.versions-maven-plugin>2.3</version.versions-maven-plugin>
   </properties>
 
@@ -71,8 +71,13 @@
     <dependencies>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${version.jackson}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${version.jackson-databind}</version>
+        <version>${version.jackson}</version>
       </dependency>
       <dependency>
         <groupId>com.maxmind.geoip2</groupId>
@@ -138,6 +143,36 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${version.junit5}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${version.junit5}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-engine</artifactId>
+        <version>${version.junit5-platform}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-launcher</artifactId>
+        <version>${version.junit5-platform}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-surefire-provider</artifactId>
+        <version>${version.junit5-platform}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>${version.mockito-core}</version>
@@ -156,12 +191,12 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-aop</artifactId>
-        <version>${version.spring-aop}</version>
+        <version>${version.springframework}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
-        <version>${version.spring-beans}</version>
+        <version>${version.springframework}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -172,17 +207,30 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>${version.spring-context}</version>
+        <version>${version.springframework}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${version.springframework}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
-        <version>${version.spring-web}</version>
+        <version>${version.springframework}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>${version.spring-webmvc}</version>
+        <version>${version.springframework}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${version.spring-boot}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.springframework.data</groupId>
@@ -216,6 +264,7 @@
         <configuration>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
+          <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
@@ -279,6 +328,51 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${version.maven-surefire-plugin}</version>
+        <configuration>
+          <!--
+          <failIfNoTests>true</failIfNoTests>
+          -->
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+          <properties>
+            <excludeTags>integration-test</excludeTags>
+          </properties>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${version.junit5-platform}</version>
+            <scope>runtime</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${version.junit5}</version>
+            <scope>runtime</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${version.junit5}</version>
+            <scope>runtime</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${version.junit5}</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+      </plugin>
+
+
     </plugins>
   </build>
 
