--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>dc-commons-jdbi</module>
     <module>dc-commons-feign</module>
     <module>dc-commons-springboot</module>
+    <module>dc-commons-springsecurity</module>
   </modules>
 
   <name>DigitalCollections: Commons (Parent)</name>
@@ -38,7 +39,7 @@
     <version.dc-core-model>2.1.0-SNAPSHOT</version.dc-core-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
-    <version.jackson>2.8.6</version.jackson>
+    <version.jackson>2.9.4</version.jackson>
     <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
     <version.junit>4.12</version.junit>
@@ -53,7 +54,7 @@
     <version.springframework>5.0.4.RELEASE</version.springframework>
     <version.spring-boot>2.0.0.RELEASE</version.spring-boot>
     <version.spring-data-commons>1.13.4.RELEASE</version.spring-data-commons>
-    <version.spring-security>4.2.1.RELEASE</version.spring-security>
+    <version.spring-security>5.0.3.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.7.RELEASE</version.thymeleaf>
 
     <!-- Plugin versions -->
@@ -83,6 +84,11 @@
         <groupId>com.maxmind.geoip2</groupId>
         <artifactId>geoip2</artifactId>
         <version>${version.geoip}</version>
+      </dependency>
+      <dependency>
+        <groupId>de.digitalcollections.commons</groupId>
+        <artifactId>dc-commons-springsecurity</artifactId>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>de.digitalcollections.core</groupId>
@@ -236,6 +242,11 @@
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-commons</artifactId>
         <version>${version.spring-data-commons}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${version.spring-security}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.security</groupId>
