--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons Spring Data</name>
@@ -14,8 +14,8 @@
   
   <dependencies>
     <dependency>
-      <groupId>de.digitalcollections.core</groupId>
-      <artifactId>dc-core-model</artifactId>
+      <groupId>de.digitalcollections.model</groupId>
+      <artifactId>dc-model</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
