--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.digitalcollections.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -39,7 +39,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-core-model>2.1.0</version.dc-core-model>
+    <version.dc-model>1.0.0-SNAPSHOT</version.dc-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.4</version.jackson>
@@ -101,9 +101,9 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>de.digitalcollections.core</groupId>
-        <artifactId>dc-core-model</artifactId>
-        <version>${version.dc-core-model}</version>
+        <groupId>de.digitalcollections.model</groupId>
+        <artifactId>dc-model</artifactId>
+        <version>${version.dc-model}</version>
       </dependency>
       <dependency>
         <groupId>info.solidsoft.mockito</groupId>
