--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
     <version>4.1.0-SNAPSHOT</version>
   </parent>
-  
+
   <name>DigitalCollections: Commons JDBI</name>
   <artifactId>dc-commons-jdbi</artifactId>
   <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
-    <version.dc-model>3.0.0</version.dc-model>
+    <version.dc-model>3.1.0-SNAPSHOT</version.dc-model>
     <version.jackson-databind>2.9.9.1</version.jackson-databind>
     <version.jdbi3>3.6.0</version.jdbi3>
   </properties>
-    
+
   <dependencies>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
