--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -14,7 +14,7 @@
   <packaging>jar</packaging>
   
   <properties>
-    <version.dc-model>3.0.0</version.dc-model>
+    <version.dc-model>3.1.0-SNAPSHOT</version.dc-model>
     <version.spring-data-commons>2.1.5.RELEASE</version.spring-data-commons>
   </properties>
   
