--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,14 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <!-- Plugin versions -->
-    <version.jacoco-maven-plugin>0.8.4</version.jacoco-maven-plugin>
+    <version.jacoco-maven-plugin>0.8.5</version.jacoco-maven-plugin>
     <version.maven-checkstyle-plugin>3.1.0</version.maven-checkstyle-plugin>
     <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
-    <version.maven-failsafe-plugin>2.22.2</version.maven-failsafe-plugin>
+    <version.maven-failsafe-plugin>3.0.0-M4</version.maven-failsafe-plugin>
     <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
     <version.maven-javadoc-plugin>3.1.1</version.maven-javadoc-plugin>
-    <version.maven-source-plugin>3.1.0</version.maven-source-plugin>
-    <version.maven-surefire-plugin>3.0.0-M3</version.maven-surefire-plugin>
+    <version.maven-source-plugin>3.2.0</version.maven-source-plugin>
+    <version.maven-surefire-plugin>3.0.0-M4</version.maven-surefire-plugin>
     <version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
     <version.versions-maven-plugin>2.7</version.versions-maven-plugin>
   </properties>
