--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -11,7 +11,7 @@
 
   <name>DigitalCollections: Commons JDBI</name>
   <artifactId>dc-commons-jdbi</artifactId>
-  <version>4.1.0-SNAPSHOT</version>
+  <version>4.1.0</version>
   <packaging>jar</packaging>
 
   <properties>
