--- a/dc-commons-validation/pom.xml
+++ b/dc-commons-validation/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.1.0-SNAPSHOT</version>
+    <version>4.1.0</version>
   </parent>
 
   <name>DigitalCollections: Commons Validation</name>
