--- a/dc-commons-prosemirror/dc-commons-prosemirror-model-jackson/pom.xml
+++ b/dc-commons-prosemirror/dc-commons-prosemirror-model-jackson/pom.xml
@@ -16,8 +16,8 @@
     <version.assertj>3.13.2</version.assertj>
     <version.commons-beanutils>1.9.4</version.commons-beanutils>
     <version.jackson-annotations>2.10.1</version.jackson-annotations>
-    <version.jackson-core>2.10.0.pr1</version.jackson-core>
-    <version.jackson-databind>2.9.10.1</version.jackson-databind>
+    <version.jackson-core>2.10.1</version.jackson-core>
+    <version.jackson-databind>2.10.1</version.jackson-databind>
     <version.junit>5.5.2</version.junit>
     <version.logback-classic>1.2.3</version.logback-classic>
     <version.maven-resources-plugin>3.1.0</version.maven-resources-plugin>
