--- a/dc-commons-springsecurity/pom.xml
+++ b/dc-commons-springsecurity/pom.xml
@@ -9,10 +9,15 @@
     <version>4.1.0</version>
   </parent>
 
+  <name>DigitalCollections: Commons Spring Security (Spring Security 5)</name>
+  <artifactId>dc-commons-springsecurity</artifactId>
+  <version>4.1.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  
   <properties>
     <version.assertj>3.13.2</version.assertj>
     <version.hamcrest-core>2.1</version.hamcrest-core>
-    <version.jackson>2.9.10.1</version.jackson>
+    <version.jackson>2.10.1</version.jackson>
     <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
     <version.javax.servlet-api>4.0.1</version.javax.servlet-api>
     <version.jaxb-api>2.3.1</version.jaxb-api>
@@ -21,14 +26,10 @@
     <version.mockito-core>3.0.0</version.mockito-core>
     <version.slf4j>1.7.29</version.slf4j>
     <version.snakeyaml>1.25</version.snakeyaml>
-    <version.spring>5.1.8.RELEASE</version.spring>
+    <version.spring>5.2.2.RELEASE</version.spring>
     <version.spring-boot>2.2.2.RELEASE</version.spring-boot>
     <version.spring-security>5.2.1.RELEASE</version.spring-security>
   </properties>
-
-  <name>DigitalCollections: Commons Spring Security (Spring Security 5)</name>
-  <artifactId>dc-commons-springsecurity</artifactId>
-  <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
