--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <doclint>none</doclint>
+            </configuration>
           </execution>
         </executions>
       </plugin>
