--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 
   <properties>
     <!-- Build properties -->
-    <java.version>1.8</java.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>11</java.version>
+    <maven.compiler.source>11</maven.compiler.source> <!-- default configuration property name used by maven compiler plugin -->
+    <maven.compiler.target>11</maven.compiler.target> <!-- default configuration property name used by maven compiler plugin -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
