--- a/dc-commons-xml/pom.xml
+++ b/dc-commons-xml/pom.xml
@@ -15,6 +15,7 @@
   
   <properties>
     <version.assertj>3.15.0</version.assertj>
+    <version.commons-lang3>3.10</version.commons-lang3>
     <version.guava>28.2-jre</version.guava>
     <version.junit>5.6.1</version.junit>
     <version.saxon>10.0</version.saxon>
@@ -31,6 +32,11 @@
       <groupId>net.sf.saxon</groupId>
       <artifactId>Saxon-HE</artifactId>
       <version>${version.saxon}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${version.commons-lang3}</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
