--- a/dc-commons-feign/pom.xml
+++ b/dc-commons-feign/pom.xml
@@ -14,7 +14,7 @@
   <packaging>jar</packaging>
   
   <properties>
-    <version.dc-model>6.1.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>6.1.0</version.dc-model>
     <version.feign-core>11.0</version.feign-core>
   </properties>
 
