--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -15,7 +15,7 @@
 
   <properties>
     <version.assertj-core>3.16.1</version.assertj-core>
-    <version.dc-model>6.1.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>6.1.0</version.dc-model>
     <version.junit>5.6.2</version.junit>
     <version.mockito-core>3.3.3</version.mockito-core>
     <version.slf4j>1.7.30</version.slf4j>
