--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -14,8 +14,8 @@
   <packaging>jar</packaging>
   
   <properties>
-    <version.dc-model>6.1.0-SNAPSHOT</version.dc-model>
-    <version.spring-data-commons>2.2.5.RELEASE</version.spring-data-commons>
+    <version.dc-model>6.1.0</version.dc-model>
+    <version.spring-data-commons>2.2.7.RELEASE</version.spring-data-commons>
   </properties>
   
   <dependencies>
