--- a/dc-commons-validation/pom.xml
+++ b/dc-commons-validation/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.1.1-SNAPSHOT</version>
+    <version>4.1.1</version>
   </parent>
 
   <name>DigitalCollections: Commons Validation</name>
   <artifactId>dc-commons-validation</artifactId>
-  <version>4.1.0-SNAPSHOT</version>
+  <version>4.1.0</version>
   <packaging>jar</packaging>
 
   <properties>
