--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
 
   <groupId>de.digitalcollections.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>4.1.1-SNAPSHOT</version>
+  <version>4.1.1</version>
   <packaging>pom</packaging>
 
   <modules>
-    <module>dc-commons-feign</module>
     <module>dc-commons-file</module>
     <module>dc-commons-jdbi</module>
     <module>dc-commons-prosemirror</module>
