--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -16,9 +16,9 @@
 
   <properties>
     <version.assertj>3.16.1</version.assertj>
-    <version.dc-commons-springsecurity>4.1.1-SNAPSHOT</version.dc-commons-springsecurity>
-    <version.jackson-annotations>2.10.3</version.jackson-annotations>
-    <version.jackson-databind>2.10.3</version.jackson-databind>
+    <version.dc-commons-springsecurity>4.1.1</version.dc-commons-springsecurity>
+    <version.jackson-annotations>2.11.0</version.jackson-annotations>
+    <version.jackson-databind>2.11.0</version.jackson-databind>
     <version.junit>5.6.2</version.junit>
     <version.micrometer>1.5.1</version.micrometer>
     <version.mockito-core>3.3.3</version.mockito-core>
