--- a/dc-commons-xml/pom.xml
+++ b/dc-commons-xml/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons XML</name>
   <artifactId>dc-commons-xml</artifactId>
-  <version>5.1.2</version>
+  <version>5.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <properties>
@@ -26,11 +26,6 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${version.guava}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
-      <version>${version.saxon}</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
