--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -11,13 +11,13 @@
 
   <name>DigitalCollections: Commons JDBI</name>
   <artifactId>dc-commons-jdbi</artifactId>
-  <version>4.1.2</version>
+  <version>4.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
-    <version.dc-model>6.2.1</version.dc-model>
-    <version.jackson-databind>2.11.0</version.jackson-databind>
-    <version.jdbi3>3.14.4</version.jdbi3>
+    <version.dc-model>9.0.0-SNAPSHOT</version.dc-model>
+    <version.jackson-databind>2.11.4</version.jackson-databind>
+    <version.jdbi3>3.18.0</version.jdbi3>
   </properties>
 
   <dependencies>
