--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -10,11 +10,11 @@
   
   <name>DigitalCollections: Commons Spring Data</name>
   <artifactId>dc-commons-springdata</artifactId>
-  <version>4.1.2</version>
+  <version>5.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <properties>
-    <version.dc-model>6.2.1</version.dc-model>
+    <version.dc-model>9.0.0-SNAPSHOT</version.dc-model>
     <version.spring-data-commons>2.2.7.RELEASE</version.spring-data-commons>
   </properties>
   
